syntax = "proto3";

package authpb;

option go_package="gen/authpb";

import "google/api/annotations.proto";

service Auth {
    rpc Register(RegisterReq) returns (RegisterResp) {
        option (google.api.http) = {
            post: "/register"
            body: "*"
        };
    };
    rpc Login(LoginReq) returns (LoginResp) {
        option (google.api.http) = {
            post: "/login"
            body: "*"
        };
    };
    rpc Refresh(RefreshReq) returns (RefreshResp) {
        option (google.api.http) = {
            post: "/refresh"
            body: "*"
        };
    };
}

message RegisterReq {
    string login = 1;
    string password = 2;
}

message RegisterResp {
    bool registred = 1;
}

message LoginReq {
    string login = 1;
    string password = 2;
}

message LoginResp {
    string access_token = 1;
    string refresh_token = 2;
}

message RefreshReq {
    string refresh_token = 1;
}

message RefreshResp {
    string access_token = 1;
    string refresh_token = 2;
}