syntax = "proto3";

package chatpb;

option go_package="gen/chatpb";

service Chat {
    rpc NewChat(NewChatReq) returns (NewChatResp);
    rpc NewMessage(NewMessageReq) returns (NewMessageResp);
    rpc ChatHistory(ChatHistoryReq) returns (ChatHistoryResp);
}

message NewChatReq {
    string token = 1;
    bool readonly = 2;
    int64 ttlSecs = 3;
}

message NewChatResp {
    string uuid = 1;
}

message NewMessageReq {
    string token = 1;
    string chatUuid = 2;
    string message = 3;
}

message NewMessageResp {
    bool published = 1;
}

message ChatHistoryReq {
    string token = 1;
    string uuid = 2;
}

message ChatHistoryResp {
    repeated Message messages = 1;
}

message Message {
    string uuid = 1;
    string author = 2;
    int64 published = 3; 
    string message = 4;
}